--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 </li>
                 
                 
-                <li><a href="#blog-section" class="nav-link">融资租赁整体解决方案
+                <li><a href="#blog-section" class="nav-link">项目方案
 
 </a></li>
                 <li><a href="#contact-section" class="nav-link">联系我们</a></li>
