--- a/index.html
+++ b/index.html
@@ -54,8 +54,12 @@
         <div class="row align-items-center">
           
           <div class="col-6 col-xl-2">
-            <h1 class="mb-0 site-logo"><a href="index.html" class="h2 mb-0">杭州中裕融资租赁有限公司<span class="text-primary">.</span> </a></h1>
-          </div>
+  <h1 class="mb-0 site-logo">
+    <a href="index.html">
+      <img src="logo.png" alt="杭州中裕融资租赁有限公司" style="height:42px;">
+    </a>
+  </h1>
+</div>
 
           <div class="col-12 col-md-10 d-none d-xl-block">
             <nav class="site-navigation position-relative text-right" role="navigation">
