--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>杭州融资租赁有限公司 &mdash; Website Template by Colorlib</title>
+    <title>杭州中裕融资租赁有限公司 &mdash; Website Template by Colorlib</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -53,14 +53,11 @@
       <div class="container">
         <div class="row align-items-center">
           
-          <<div class="col-6 col-xl-2">
+          <div class="col-6 col-xl-2">
   <h1 class="mb-0 site-logo">
-    <a href="index.html" class="h2 mb-0 text-nowrap" style="font-size:1.1rem;">
-      中裕租赁<span class="text-primary">.</span>
+    <a href="index.html">
+      <img src="logo.png" alt="杭州中裕融资租赁有限公司" style="height:42px;">
     </a>
-    <small class="d-block text-muted" style="font-size:0.58rem; line-height:1; margin-top:-4px;">
-      杭州中裕融资租赁有限公司
-    </small>
   </h1>
 </div>
 
