--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
       <div class="container">
         <div class="row align-items-center">
           
-          <div class="col-6 col-xl-2">
+          <div class="col-6 col-xl-2 text-truncate">
   <h1 class="mb-0 site-logo">
-    <a href="index.html">
-      <img src="logo.png" alt="杭州中裕融资租赁有限公司" style="height:42px;">
+    <a href="index.html" class="h2 mb-0 d-inline-block text-truncate" style="font-size:1.05rem; max-width:100%; white-space:nowrap;">
+      杭州中裕融资租赁有限公司<span class="text-primary">.</span>
     </a>
   </h1>
 </div>
