--- a/index.html
+++ b/index.html
@@ -53,9 +53,15 @@
       <div class="container">
         <div class="row align-items-center">
           
-          <div class="col-6 col-xl-2 text-truncate">
+         <div class="col-6 col-xl-2 px-0">
   <h1 class="mb-0 site-logo">
-    <a href="index.html" class="h2 mb-0 d-inline-block text-truncate" style="font-size:1.05rem; max-width:100%; white-space:nowrap;">
+    <a href="index.html" 
+       class="h2 mb-0 d-block text-left" 
+       style="font-size:clamp(14px, 2.8vw, 20px); 
+              font-weight:700; 
+              white-space:nowrap; 
+              line-height:1.2; 
+              letter-spacing:0.5px;">
       杭州中裕融资租赁有限公司<span class="text-primary">.</span>
     </a>
   </h1>
