--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
   <h1 class="mb-0 site-logo">
     <a href="index.html" 
        class="h2 mb-0 d-block text-left" 
-       style="font-size:clamp(14px, 2.8vw, 20px); 
-              font-weight:700; 
+       style="font-size:clamp(15.5px, 3.3vw, 26px);   /* 比上一版再大一号 */
+              font-weight:800; 
               white-space:nowrap; 
-              line-height:1.2; 
-              letter-spacing:0.5px;">
+              line-height:1.3; 
+              letter-spacing:0.8px;">
       杭州中裕融资租赁有限公司<span class="text-primary">.</span>
     </a>
   </h1>
