--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
       <div class="container">
         <div class="row mb-5 justify-content-center">
           <div class="col-md-8 text-center">
-            <h2 class="section-title mb-3" data-aos="fade-up" data-aos-delay="">About Us</h2>
+            <h2 class="section-title mb-3" data-aos="fade-up" data-aos-delay="">公司简介</h2>
             <p class="lead" data-aos="fade-up" data-aos-delay="100">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus minima neque tempora reiciendis.</p>
           </div>
         </div>
@@ -949,7 +949,7 @@
           <div class="col-md-9">
             <div class="row">
               <div class="col-md-5">
-                <h2 class="footer-heading mb-4">About Us</h2>
+                <h2 class="footer-heading mb-4">公司简介</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque facere laudantium magnam voluptatum autem. Amet aliquid nesciunt veritatis aliquam.</p>
               </div>
               <div class="col-md-3 ml-auto">
@@ -957,7 +957,7 @@
                 <ul class="list-unstyled">
                   <li><a href="#about-section" class="smoothscroll">Terms</a></li>
                   <li><a href="#about-section" class="smoothscroll">Policy</a></li>
-                  <li><a href="#about-section" class="smoothscroll">About Us</a></li>
+                  <li><a href="#about-section" class="smoothscroll">公司简介</a></li>
                   <li><a href="#services-section" class="smoothscroll">Services</a></li>
                   <li><a href="#testimonials-section" class="smoothscroll">Testimonials</a></li>
                   <li><a href="#contact-section" class="smoothscroll">Contact Us</a></li>
