--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <li><a href="#pricing-section" class="nav-link">Pricing</a></li>
                     <li><a href="#faq-section" class="nav-link">FAQ</a></li>
                     <li><a href="#gallery-section" class="nav-link">Gallery</a></li>
-                    <li><a href="#services-section" class="nav-link">Services</a></li>
+                    <li><a href="#services-section" class="nav-link">主要业务</a></li>
                     <li><a href="#testimonials-section" class="nav-link">Testimonials</a></li>
                     <li class="has-children">
                       <a href="#">More Links</a>
@@ -481,7 +481,7 @@
       <div class="container">
         <div class="row mb-5">
           <div class="col-12 text-center" data-aos="fade">
-            <h2 class="section-title mb-3">Our Services</h2>
+            <h2 class="section-title mb-3">我们的服务</h2>
           </div>
         </div>
         <div class="row align-items-stretch">
@@ -958,7 +958,7 @@
                   <li><a href="#about-section" class="smoothscroll">Terms</a></li>
                   <li><a href="#about-section" class="smoothscroll">Policy</a></li>
                   <li><a href="#about-section" class="smoothscroll">公司简介</a></li>
-                  <li><a href="#services-section" class="smoothscroll">Services</a></li>
+                  <li><a href="#services-section" class="smoothscroll">提供服务</a></li>
                   <li><a href="#testimonials-section" class="smoothscroll">Testimonials</a></li>
                   <li><a href="#contact-section" class="smoothscroll">Contact Us</a></li>
                 </ul>
