--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <h1 class="mb-0 site-logo">
     <a href="index.html" 
        class="h2 mb-0 d-block text-left" 
-       style="font-size:clamp(15.5px, 3.3vw, 36px);   /* 比上一版再大一号 */
+       style="font-size:clamp(15.5px, 3.3vw, 30px);   /* 比上一版再大一号 */
               font-weight:800; 
               white-space:nowrap; 
               line-height:1.3; 
@@ -123,7 +123,7 @@
           <div class="col-md-10 mt-lg-5 text-center">
             <div class="single-text owl-carousel">
               <div class="slide">
-                <h1 class="text-uppercase" data-aos="fade-up">Banking Solutions</h1>
+                <h1 class="text-uppercase" data-aos="fade-up">融资租赁 咨询服务</h1>
                 <p class="mb-5 desc"  data-aos="fade-up" data-aos-delay="100">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae minima delectus accusamus accusantium deleniti libero excepturi porro illo.</p>
                 <div data-aos="fade-up" data-aos-delay="100">
                   <a href="#" target="_blank" class="btn  btn-primary mr-2 mb-2">Get In Touch</a>
@@ -219,8 +219,8 @@
           </div>
           <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
             <div class="mb-4">
-              <h3 class="h3 mb-4 text-black">Banking Solutions Is Our Priority</h3>
-              <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+              <h3 class="h3 mb-4 text-black">融资租赁咨询服务是我们的主营业务</h3>
+              <p>设备所有权转移，租金灵活，税前还款降低成本.</p>
               
             </div>
               
@@ -785,7 +785,7 @@
                 <div class="unit-4 d-flex">
                   <div class="unit-4-icon mr-4 mb-3"><span class="text-primary flaticon-smartphone"></span></div>
                   <div>
-                    <h3>Banking Consulation </h3>
+                    <h3>融资租赁 咨询服务 </h3>
                     <p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
                     <p class="mb-0"><a href="#">Learn More</a></p>
                   </div>
