--- a/index.html
+++ b/index.html
@@ -123,28 +123,26 @@
           <div class="col-md-10 mt-lg-5 text-center">
             <div class="single-text owl-carousel">
               <div class="slide">
-                <h1 class="text-uppercase" data-aos="fade-up">融资租赁 咨询服务</h1>
-                <p class="mb-5 desc"  data-aos="fade-up" data-aos-delay="100">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae minima delectus accusamus accusantium deleniti libero excepturi porro illo.</p>
+                <h1 class="text-uppercase" data-aos="fade-up">融资租赁 业务咨询</h1>
+                <p class="mb-5 desc"  data-aos="fade-up" data-aos-delay="100">设备所有权转移，租金灵活，税前还款降低成本.</p>
                 <div data-aos="fade-up" data-aos-delay="100">
-                  <a href="#" target="_blank" class="btn  btn-primary mr-2 mb-2">Get In Touch</a>
+                  <a href="#" target="_blank" class="btn  btn-primary mr-2 mb-2">请联系我们</a>
                 </div>
               </div>
 
               <div class="slide">
-                <h1 class="text-uppercase" data-aos="fade-up">Financing Solutions</h1>
-                <p class="mb-5 desc" data-aos="fade-up" data-aos-delay="100">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Repudiandae minima delectus accusamus accusantium deleniti libero excepturi porro illo.</p>
+                <h1 class="text-uppercase" data-aos="fade-up">直租服务 业务咨询</h1>
+                <p class="mb-5 desc" data-aos="fade-up" data-aos-delay="100">我们直接购买设备租给您使用，首付低至0元.</p>
                 <div data-aos="fade-up" data-aos-delay="100">
-                  <a href="#" target="_blank" class="btn  btn-primary mr-2 mb-2">Get In Touch</a>
+                  <a href="#" target="_blank" class="btn  btn-primary mr-2 mb-2">请联系我们</a>
                 </div>
               </div>
 
               <div class="slide">
-                <h1 class="text-uppercase" data-aos="fade-up">Savings Accounts</h1>
-                <p class="mb-5 desc" data-aos="fade-up" data-aos-delay="100">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Repudiandae minima delectus accusamus accusantium deleniti libero excepturi porro illo.</p>
+                <h1 class="text-uppercase" data-aos="fade-up">回租方案 业务咨询</h1>
+                <p class="mb-5 desc" data-aos="fade-up" data-aos-delay="100">已有设备出售给我们再租回，快速回笼资金.</p>
                 <div data-aos="fade-up" data-aos-delay="100">
-                  <a href="#" target="_blank" class="btn  btn-primary mr-2 mb-2">Get In Touch</a>
+                  <a href="#" target="_blank" class="btn  btn-primary mr-2 mb-2">请联系我们</a>
                 </div>
               </div>
 
