--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
           <div class="col-md-10 mt-lg-5 text-center">
             <div class="single-text owl-carousel">
               <div class="slide">
-                <h1 class="text-uppercase" data-aos="fade-up">融资租赁 业务咨询</h1>
-                <p class="mb-5 desc"  data-aos="fade-up" data-aos-delay="100">设备所有权转移，租金灵活，税前还款降低成本.</p>
+                <h1 class="text-uppercase" data-aos="fade-up">融资咨询 资产管理</h1>
+                <p class="mb-5 desc"  data-aos="fade-up" data-aos-delay="100">免费提供租赁方案设计、税务筹划、资产评估、二手设备处置等全流程服务，商业体，电影院重资产回收，托管.</p>
                 <div data-aos="fade-up" data-aos-delay="100">
                   <a href="#" target="_blank" class="btn  btn-primary mr-2 mb-2">请联系我们</a>
                 </div>
@@ -132,7 +132,7 @@
 
               <div class="slide">
                 <h1 class="text-uppercase" data-aos="fade-up">直租服务 业务咨询</h1>
-                <p class="mb-5 desc" data-aos="fade-up" data-aos-delay="100">我们直接购买设备租给您使用，首付低至0元.</p>
+                <p class="mb-5 desc" data-aos="fade-up" data-aos-delay="100">由我公司直接购买您所需的设备后出租给您使用，设备所有权归我司，租期结束后可低价回购或续租.工程机械、医疗设备、生产线、商用车等首次购置</p>
                 <div data-aos="fade-up" data-aos-delay="100">
                   <a href="#" target="_blank" class="btn  btn-primary mr-2 mb-2">请联系我们</a>
                 </div>
@@ -140,7 +140,7 @@
 
               <div class="slide">
                 <h1 class="text-uppercase" data-aos="fade-up">回租方案 业务咨询</h1>
-                <p class="mb-5 desc" data-aos="fade-up" data-aos-delay="100">已有设备出售给我们再租回，快速回笼资金.</p>
+                <p class="mb-5 desc" data-aos="fade-up" data-aos-delay="100">您将自有设备出售给我公司后继续使用，同时快速回笼资金，盘活固定资产，流动资金紧张、扩大再生产、短期周转.</p>
                 <div data-aos="fade-up" data-aos-delay="100">
                   <a href="#" target="_blank" class="btn  btn-primary mr-2 mb-2">请联系我们</a>
                 </div>
