--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
               </div>
 
               <div class="slide">
-                <h1 class="text-uppercase" data-aos="fade-up">直租服务 业务咨询</h1>
+                <h1 class="text-uppercase" data-aos="fade-up">直租业务 厂商租赁</h1>
                 <p class="mb-5 desc" data-aos="fade-up" data-aos-delay="100">由我公司直接购买您所需的设备后出租给您使用，设备所有权归我司，租期结束后可低价回购或续租.工程机械、医疗设备、生产线、商用车等首次购置</p>
                 <div data-aos="fade-up" data-aos-delay="100">
                   <a href="#" target="_blank" class="btn  btn-primary mr-2 mb-2">请联系我们</a>
@@ -139,7 +139,7 @@
               </div>
 
               <div class="slide">
-                <h1 class="text-uppercase" data-aos="fade-up">回租方案 业务咨询</h1>
+                <h1 class="text-uppercase" data-aos="fade-up">回租业务 厂商租赁</h1>
                 <p class="mb-5 desc" data-aos="fade-up" data-aos-delay="100">您将自有设备出售给我公司后继续使用，同时快速回笼资金，盘活固定资产，流动资金紧张、扩大再生产、短期周转.</p>
                 <div data-aos="fade-up" data-aos-delay="100">
                   <a href="#" target="_blank" class="btn  btn-primary mr-2 mb-2">请联系我们</a>
