--- a/index.html
+++ b/index.html
@@ -947,8 +947,18 @@
           <div class="col-md-9">
             <div class="row">
               <div class="col-md-5">
-                <h2 class="footer-heading mb-4">公司简介</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque facere laudantium magnam voluptatum autem. Amet aliquid nesciunt veritatis aliquam.</p>
+                <div class="about-text">
+  <h3>公司简介</h3>
+  <p class="text-muted lead">
+    杭州中裕融资租赁有限公司成立于2018年，注册资本2.6亿元，是浙江省内领先的专业设备融资服务机构。公司专注为中小企业提供工程机械、医疗设备、工业制造、商用车辆等领域的一站式融资租赁解决方案。
+  </p>
+  <p class="text-muted">
+    截至2025年，公司累计投放金额超30亿元，服务客户800余家，与三一重工、徐工集团、迈瑞医疗、宇通客车等多家行业龙头建立长期战略合作。凭借灵活的租赁模式、快速的审批流程和专业的风控体系，中裕租赁已成为长三角地区中小企业设备升级的首选合作伙伴。
+  </p>
+  <p class="text-muted">
+    我们坚持“设备即服务，融资更简单”的理念，致力于帮助更多企业以更低成本实现设备更新和技术升级，与您共同成长！
+  </p>
+</div>
               </div>
               <div class="col-md-3 ml-auto">
                 <h2 class="footer-heading mb-4">Quick Links</h2>
