--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         <div class="row mb-5 justify-content-center">
           <div class="col-md-8 text-center">
             <h2 class="section-title mb-3" data-aos="fade-up" data-aos-delay="">公司简介</h2>
-            <p class="lead" data-aos="fade-up" data-aos-delay="100">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus minima neque tempora reiciendis.</p>
+            <p class="lead" data-aos="fade-up" data-aos-delay="100">杭州中裕融资租赁有限公司成立于2018年，注册资本2.6亿元，是浙江省内领先的专业设备融资服务机构。公司专注为中小企业提供工程机械、医疗设备、工业制造、商用车辆等领域的一站式融资租赁解决方案。</p>
           </div>
         </div>
         <div class="row">
