--- a/index.html
+++ b/index.html
@@ -475,50 +475,104 @@
     
     
 
-    <section class="site-section border-bottom bg-light" id="services-section">
-      <div class="container">
-        <div class="row mb-5">
-          <div class="col-12 text-center" data-aos="fade">
-            <h2 class="section-title mb-3">我们的服务</h2>
+   <section class="site-section border-bottom bg-light" id="services-section">
+  <div class="container">
+    <div class="row mb-5">
+      <div class="col-12 text-center" data-aos="fade">
+        <h2 class="section-title mb-3">我们的服务</h2>
+        <h3 class="section-subtitle mb-4 text-primary">一站式设备融资租赁解决方案</h3>
+      </div>
+    </div>
+
+    <div class="row align-items-stretch">
+
+      <!-- 业务1：直租 -->
+      <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up">
+        <div class="unit-4">
+          <div class="unit-4-icon">
+            <img src="images/flaticon-svg/svg/001-wallet.svg" alt="直租" class="img-fluid w-25 mb-4">
+          </div>
+          <div>
+            <h3>直租服务</h3>
+            <p>公司直接出资购买您所需的设备后出租给您使用，租期灵活，首付低至0元，租期结束可优惠回购。</p>
+            <p><a href="#contact" class="smoothscroll">立即咨询 →</a></p>
           </div>
         </div>
-        <div class="row align-items-stretch">
-          <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up">
-            <div class="unit-4">
-              <div class="unit-4-icon">
-                <img src="images/flaticon-svg/svg/001-wallet.svg" alt="Free Website Template by Free-Template.co" class="img-fluid w-25 mb-4">
-              </div>
-              <div>
-                <h3>Business Consulting</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione animi tempora sint hic quod!</p>
-                <p><a href="#">Learn More</a></p>
-              </div>
-            </div>
+      </div>
+
+      <!-- 业务2：回租 -->
+      <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="100">
+        <div class="unit-4">
+          <div class="unit-4-icon">
+            <img src="images/flaticon-svg/svg/006-credit-card.svg" alt="回租" class="img-fluid w-25 mb-4">
           </div>
-          <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="100">
-            <div class="unit-4">
-              <div class="unit-4-icon">
-                <img src="images/flaticon-svg/svg/006-credit-card.svg" alt="Free Website Template by Free-Template.co" class="img-fluid w-25 mb-4">
-              </div>
-              <div>
-                <h3>Credit Card</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores nemo beatae minus incidunt voluptates?</p>
-                <p><a href="#">Learn More</a></p>
-              </div>
-            </div>
+          <div>
+            <h3>回租业务</h3>
+            <p>您将自有设备出售给公司后继续使用，快速回笼资金，盘活固定资产，最快3天放款。</p>
+            <p><a href="#contact" class="smoothscroll">立即咨询 →</a></p>
           </div>
-          <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="200">
-            <div class="unit-4">
-              <div class="unit-4-icon">
-                <img src="images/flaticon-svg/svg/002-rich.svg" alt="Free Website Template by Free-Template.co" class="img-fluid w-25 mb-4">
-              </div>
-              <div>
-                <h3>Income Monitoring</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores optio veritatis aperiam consequuntur qui.</p>
-                <p><a href="#">Learn More</a></p>
-              </div>
-            </div>
+        </div>
+      </div>
+
+      <!-- 业务3：厂商租赁 -->
+      <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="200">
+        <div class="unit-4">
+          <div class="unit-4-icon">
+            <img src="images/flaticon-svg/svg/002-rich.svg" alt="厂商租赁" class="img-fluid w-25 mb-4">
           </div>
+          <div>
+            <h3>厂商租赁</h3>
+            <p>与三一、徐工、迈瑞等设备厂商深度合作，为终端客户提供“0首付、分期购机”一站式服务。</p>
+            <p><a href="#contact" class="smoothscroll">立即咨询 →</a></p>
+          </div>
+        </div>
+      </div>
+
+      <!-- 业务4：联合租赁 -->
+      <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="300">
+        <div class="unit-4">
+          <div class="unit-4-icon">
+            <img src="images/flaticon-svg/svg/003-notes.svg" alt="联合租赁" class="img-fluid w-25 mb-4">
+          </div>
+          <div>
+            <h3>联合租赁</h3>
+            <p>联合银行、信托等金融机构，提供单笔超亿元、期限10年以上的大额定制化方案。</p>
+            <p><a href="#contact" class="smoothscroll">立即咨询 →</a></p>
+          </div>
+        </div>
+      </div>
+
+      <!-- 业务5：经营租赁 -->
+      <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="400">
+        <div class="unit-4">
+          <div class="unit-4-icon">
+            <img src="images/flaticon-svg/svg/004-cart.svg" alt="经营租赁" class="img-fluid w-25 mb-4">
+          </div>
+          <div>
+            <h3>经营租赁</h3>
+            <p>短期灵活租赁，租期结束设备归还，无残值风险，适合季节性或试用需求。</p>
+            <p><a href="#contact" class="smoothscroll">立即咨询 →</a></p>
+          </div>
+        </div>
+      </div>
+
+      <!-- 业务6：融资咨询与资产管理 -->
+      <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="500">
+        <div class="unit-4">
+          <div class="unit-4-icon">
+            <img src="images/flaticon-svg/svg/005-calculator.svg" alt="融资咨询" class="img-fluid w-25 mb-4">
+          </div>
+          <div>
+            <h3>融资咨询与资产管理</h3>
+            <p>免费提供方案设计、税务筹划、资产评估、二手设备处置等全流程专业服务。</p>
+            <p><a href="#contact" class="smoothscroll">立即咨询 →</a></p>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
 
 
           <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="">
