--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
       <!-- 左边图片（建议换成公司大楼/团队照/设备照） -->
       <div class="col-lg-6 mb-5" data-aos="fade-up">
         <figure class="circle-bg">
-          <img src="images/company-building.jpg" alt="杭州中裕融资租赁有限公司" class="img-fluid">
+          <img src="images/img_2.jpg" alt="杭州中裕融资租赁有限公司" class="img-fluid">
           <!-- 如果暂时没图，就继续用 img_2.jpg 也行 -->
         </figure>
       </div>
