--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <li class="has-children">
                   <a href="#about-section" class="nav-link">公司简介</a>
                   <ul class="dropdown">
-                    <li><a href="#team-section" class="nav-link">Team</a></li>
+                    <li><a href="#我们的团队-section" class="nav-link">我们的团队</a></li>
                     <li><a href="#pricing-section" class="nav-link">Pricing</a></li>
                     <li><a href="#faq-section" class="nav-link">FAQ</a></li>
                     <li><a href="#gallery-section" class="nav-link">Gallery</a></li>
@@ -258,7 +258,7 @@
       <div class="container">
         <div class="row mb-5 justify-content-center">
           <div class="col-md-8 text-center">
-            <h2 class="section-title mb-3" data-aos="fade-up" data-aos-delay="">Meet Team</h2>
+            <h2 class="section-title mb-3" data-aos="fade-up" data-aos-delay="">我们拥有业界最优秀的团队</h2>
             <p class="lead" data-aos="fade-up" data-aos-delay="100">A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
           </div>
         </div>
