--- a/index.html
+++ b/index.html
@@ -262,6 +262,71 @@
             <p class="lead" data-aos="fade-up" data-aos-delay="100">A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
           </div>
         </div>
+
+
+<!-- 团队介绍模块 -->
+<section class="site-section" id="team-section">
+  <div class="container">
+    <div class="row mb-5 justify-content-center text-center" data-aos="fade">
+      <div class="col-md-8">
+        <h2 class="section-title mb-3">核心团队</h2>
+        <p class="lead">平均15年以上行业经验 · 累计投放超300亿元</p>
+      </div>
+    </div>
+
+    <div class="row">
+
+      <!-- 创始人/总经理 -->
+      <div class="col-6 col-md-4 col-lg-3 mb-5" data-aos="fade-up">
+        <div class="text-center">
+          <img src="images/team_1.jpg" alt="董事长兼总经理" class="img-fluid rounded-circle mb-3" style="width:180px;height:180px;object-fit:cover;">
+          <h3 class="mb-0">张总</h3>
+          <span class="d-block text-muted mb-2">董事长兼总经理</span>
+          <p class="small text-muted">20年金融租赁经验，曾任某股份制银行杭州分行副行长、某头部租赁公司副总经理，主导投放超150亿元。</p>
+        </div>
+      </div>
+
+      <!-- 风控负责人 -->
+      <div class="col-6 col-md-4 col-lg-3 mb-5" data-aos="fade-up" data-aos-delay="100">
+        <div class="text-center">
+          <img src="images/team_2.jpg" alt="风控总监" class="img-fluid rounded-circle mb-3" style="width:180px;height:180px;object-fit:cover;">
+          <h3 class="mb-0">李总</h3>
+          <span class="d-block text-muted mb-2">风控总监</span>
+          <p class="small text-muted">原国资租赁公司风控副总，15年工程机械、医疗设备领域风控经验，主导项目0不良记录。</p>
+        </div>
+      </div>
+
+      <!-- 业务负责人 -->
+      <div class="col-6 col-md-4 col-lg-3 mb-5" data-aos="fade-up" data-aos-delay="200">
+        <div class="text-center">
+          <img src="images/team_3.jpg" alt="业务总监" class="img-fluid rounded-circle mb-3" style="width:180px;height:180px;object-fit:cover;">
+          <h3 class="mb-0">王总</h3>
+          <span class="d-block text-muted mb-2">业务总监</span>
+          <p class="small text-muted">10年厂商租赁渠道经验，曾任三一重工金融事业部区域负责人，深度合作全国300+经销商。</p>
+        </div>
+      </div>
+
+      <!-- 财务/法务负责人（可再加1-2人） -->
+      <div class="col-6 col-md-4 col-lg-3 mb-5" data-aos="fade-up" data-aos-delay="300">
+        <div class="text-center">
+          <img src="images/team_4.jpg" alt="财务法务总监" class="img-fluid rounded-circle mb-3" style="width:180px;height:180px;object-fit:cover;">
+          <h3 class="mb-0">陈总</h3>
+          <span class="d-block text-muted mb-2">财务法务总监</span>
+          <p class="small text-muted">注册会计师+律师双资格，12年租赁行业财务税务筹划经验，为客户节省税费超2亿元。</p>
+        </div>
+      </div>
+
+    </div>
+
+    <div class="row justify-content-center mt-4" data-aos="fade-up">
+      <div class="col-md-8 text-center">
+        <p class="lead mb-0">我们拥有来自银行、头部租赁公司、设备厂商的30+核心成员，<br>只为给您提供最专业、最安心的融资租赁服务。</p>
+      </div>
+    </div>
+  </div>
+</section>
+
+        
         <div class="row">
           
 
