--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                   <li><a href="#"><span class="icon-linkedin"></span></a></li>
                   <li><a href="#"><span class="icon-instagram"></span></a></li>
                 </ul>
-                <img src="images/person_1.jpg" alt="Image" class="img-fluid">
+                <img src="images/tuan1.jpg" alt="Image" class="img-fluid">
               </figure>
               <div class="p-3">
                 <h3>Kaiara Spencer</h3>
@@ -356,7 +356,7 @@
                   <li><a href="#"><span class="icon-linkedin"></span></a></li>
                   <li><a href="#"><span class="icon-instagram"></span></a></li>
                 </ul>
-                <img src="images/person_2.jpg" alt="Image" class="img-fluid">
+                <img src="images/tuan2.jpg" alt="Image" class="img-fluid">
               </figure>
               <div class="p-3">
                 <h3>Dave Simpson</h3>
@@ -374,7 +374,7 @@
                   <li><a href="#"><span class="icon-linkedin"></span></a></li>
                   <li><a href="#"><span class="icon-instagram"></span></a></li>
                 </ul>
-                <img src="images/person_3.jpg" alt="Image" class="img-fluid">
+                <img src="images/tuan3.jpg" alt="Image" class="img-fluid">
               </figure>
               <div class="p-3">
                 <h3>Ben Thompson</h3>
