--- a/index.html
+++ b/index.html
@@ -341,8 +341,8 @@
                 <img src="images/tuan1.jpg" alt="Image" class="img-fluid">
               </figure>
               <div class="p-3">
-                <h3>Kaiara Spencer</h3>
-                <span class="position">Accountant</span>
+                <h3>最专业的律师团队</h3>
+                <span class="position">法律顾问</span>
               </div>
             </div>
           </div>
@@ -359,8 +359,8 @@
                 <img src="images/tuan2.jpg" alt="Image" class="img-fluid">
               </figure>
               <div class="p-3">
-                <h3>Dave Simpson</h3>
-                <span class="position">Bank Teller</span>
+                <h3>最厉害的业务团队</h3>
+                <span class="position">业务能力最强</span>
               </div>
             </div>
           </div>
@@ -377,8 +377,8 @@
                 <img src="images/tuan3.jpg" alt="Image" class="img-fluid">
               </figure>
               <div class="p-3">
-                <h3>Ben Thompson</h3>
-                <span class="position">Bank Teller</span>
+                <h3>最具使命感的团队</h3>
+                <span class="position">雷霆军团</span>
               </div>
             </div>
           </div>
