--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
               <p>浙江建工 · 直租1280万元</p>
             </div>
           </div>
-          <img class="img-fluid" src="images/case/img_1_thumb.jpg" alt="三一挖掘机交付">
+          <img class="img-fluid" src="images/case/img_1.jpg" alt="三一挖掘机交付">
         </a>
       </div>
 
@@ -423,7 +423,7 @@
               <p>杭州三甲医院 · 回租+直租2100万元</p>
             </div>
           </div>
-          <img class="img-fluid" src="images/case/img_2_thumb.jpg" alt="CT设备交付">
+          <img class="img-fluid" src="images/case/img_2.jpg" alt="CT设备交付">
         </a>
       </div>
 
@@ -436,7 +436,7 @@
               <p>顺丰合作商 · 厂商租赁3200万元</p>
             </div>
           </div>
-          <img class="img-fluid" src="images/case/img_3_thumb.jpg" alt="冷链车交付">
+          <img class="img-fluid" src="images/case/img_3.jpg" alt="冷链车交付">
         </a>
       </div>
 
@@ -449,7 +449,7 @@
               <p>杭州商品混凝土公司</p>
             </div>
           </div>
-          <img class="img-fluid" src="images/case/img_4_thumb.jpg" alt="泵车交付">
+          <img class="img-fluid" src="images/case/img_4" alt="泵车交付">
         </a>
       </div>
 
@@ -457,14 +457,14 @@
       <div class="item web col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
         <a href="images/case/img_5.jpg" class="item-wrap fancybox" data-fancybox="gallery">
           <div class="overlay"><div class="text"><h3>工业机器人生产线</h3><p>智能制造企业</p></div></div>
-          <img class="img-fluid" src="images/case/img_5_thumb.jpg" alt="机器人生产线">
+          <img class="img-fluid" src="images/case/img_5.jpg" alt="机器人生产线">
         </a>
       </div>
 
       <div class="item web col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
         <a href="images/case/img_6.jpg" class="item-wrap fancybox" data-fancybox="gallery">
           <div class="overlay"><div class="text"><h3>迈瑞核磁共振</h3><p>民营医院</p></div></div>
-          <img class="img-fluid" src="images/case/img_6_thumb.jpg" alt="核磁设备">
+          <img class="img-fluid" src="images/case/img_6.jpg" alt="核磁设备">
         </a>
       </div>
 
