--- a/index.html
+++ b/index.html
@@ -1037,13 +1037,13 @@
               <div class="row form-group">
                 <div class="col-md-12">
                   <label class="text-black" for="message">内容</label> 
-                  <textarea name="message" id="message" cols="30" rows="7" class="form-control" placeholder="Write your notes or questions here..."></textarea>
+                  <textarea name="message" id="message" cols="30" rows="7" class="form-control" placeholder="请在这里写下您的问题..."></textarea>
                 </div>
               </div>
 
               <div class="row form-group">
                 <div class="col-md-12">
-                  <input type="submit" value="Send Message" class="btn btn-primary btn-md text-white">
+                  <input type="submit" value="发送消息" class="btn btn-primary btn-md text-white">
                 </div>
               </div>
 
@@ -1076,18 +1076,18 @@
 </div>
               </div>
               <div class="col-md-3 ml-auto">
-                <h2 class="footer-heading mb-4">Quick Links</h2>
+                <h2 class="footer-heading mb-4">快速链接</h2>
                 <ul class="list-unstyled">
-                  <li><a href="#about-section" class="smoothscroll">Terms</a></li>
-                  <li><a href="#about-section" class="smoothscroll">Policy</a></li>
+                  <li><a href="#about-section" class="smoothscroll">条款</a></li>
+                  <li><a href="#about-section" class="smoothscroll">政策</a></li>
                   <li><a href="#about-section" class="smoothscroll">公司简介</a></li>
                   <li><a href="#services-section" class="smoothscroll">提供服务</a></li>
-                  <li><a href="#testimonials-section" class="smoothscroll">Testimonials</a></li>
-                  <li><a href="#contact-section" class="smoothscroll">Contact Us</a></li>
+                  <li><a href="#testimonials-section" class="smoothscroll">推荐</a></li>
+                  <li><a href="#contact-section" class="smoothscroll">联系我们</a></li>
                 </ul>
               </div>
               <div class="col-md-3 footer-social">
-                <h2 class="footer-heading mb-4">Follow Us</h2>
+                <h2 class="footer-heading mb-4">联系我们</h2>
                 <a href="#" class="pl-0 pr-3"><span class="icon-facebook"></span></a>
                 <a href="#" class="pl-3 pr-3"><span class="icon-twitter"></span></a>
                 <a href="#" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
@@ -1096,7 +1096,7 @@
             </div>
           </div>
           <div class="col-md-3">
-            <h2 class="footer-heading mb-4">Subscribe Newsletter</h2>
+            <h2 class="footer-heading mb-4">订阅通讯</h2>
             <form action="#" method="post" class="footer-subscribe">
               <div class="input-group mb-3">
                 <input type="text" class="form-control border-secondary text-white bg-transparent" placeholder="Enter Email" aria-label="Enter Email" aria-describedby="button-addon2">
