--- a/index.html
+++ b/index.html
@@ -81,14 +81,7 @@
                     <li><a href="#gallery-section" class="nav-link">成功案例</a></li>
                     <li><a href="#services-section" class="nav-link">主要业务</a></li>
                     <li><a href="#testimonials-section" class="nav-link">Testimonials</a></li>
-                    <li class="has-children">
-                      <a href="#">More Links</a>
-                      <ul class="dropdown">
-                        <li><a href="#">Menu One</a></li>
-                        <li><a href="#">Menu Two</a></li>
-                        <li><a href="#">Menu Three</a></li>
-                      </ul>
-                    </li>
+                   
                   </ul>
                 </li>
                 
@@ -449,7 +442,7 @@
               <p>杭州商品混凝土公司</p>
             </div>
           </div>
-          <img class="img-fluid" src="images/case/img_4" alt="泵车交付">
+          <img class="img-fluid" src="images/case/img_4.jpg" alt="泵车交付">
         </a>
       </div>
 
