--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
                 <li class="has-children">
                   <a href="#about-section" class="nav-link">公司简介</a>
                   <ul class="dropdown">
-                    <li><a href="#我们的团队-section" class="nav-link">我们的团队</a></li>
+                    <li><a href="#conpany-section" class="nav-link">我们的团队</a></li>
                     <li><a href="#pricing-section" class="nav-link">Pricing</a></li>
-                    <li><a href="#faq-section" class="nav-link">FAQ</a></li>
+                    <li><a href="#faq-section" class="nav-link">案例解答</a></li>
                     <li><a href="#gallery-section" class="nav-link">成功案例</a></li>
                     <li><a href="#services-section" class="nav-link">主要业务</a></li>
                     <li><a href="#testimonials-section" class="nav-link">Testimonials</a></li>
@@ -251,7 +251,7 @@
 
 
 <!-- 团队介绍模块 -->
-<section class="site-section" id="team-section">
+<section class="site-section" id="conpany-section">
   <div class="container">
     <div class="row mb-5 justify-content-center text-center" data-aos="fade">
       <div class="col-md-8">
