--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
                   <a href="#about-section" class="nav-link">公司简介</a>
                   <ul class="dropdown">
                     <li><a href="#conpany-section" class="nav-link">我们的团队</a></li>
-                    <li><a href="#pricing-section" class="nav-link">Pricing</a></li>
+                    <li><a href="#pricing-section" class="nav-link">成功案例</a></li>
                     <li><a href="#faq-section" class="nav-link">案例解答</a></li>
-                    <li><a href="#gallery-section" class="nav-link">成功案例</a></li>
-                    <li><a href="#services-section" class="nav-link">主要业务</a></li>
-                    <li><a href="#testimonials-section" class="nav-link">Testimonials</a></li>
+                    <li><a href="#gallery-section" class="nav-link">申请流程</a></li>
+                    <li><a href="#services-section" class="nav-link">用户反馈</a></li>
+                    <li><a href="#testimonials-section" class="nav-link">荣誉资质</a></li>
                    
                   </ul>
                 </li>
@@ -382,7 +382,7 @@
       </div>
     </section>
 
-   <section class="site-section" id="gallery-section" data-aos="fade">
+   <section class="site-section" id="pricing-sectio" data-aos="fade">
   <div class="container">
 
     <div class="row mb-5">
@@ -475,7 +475,7 @@
   </div>
 </section>
 
-    <section class="site-section bg-light">
+    <section class="site-section bg-light" id="gallery-section" >
   <div class="container">
     <div class="row mb-5 justify-content-center">
       <div class="col-md-8 text-center">
