--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
       </div>
     </section>
 
-   <section class="site-section" id="pricing-sectio" data-aos="fade">
+   <section class="site-section" id="pricing-section" data-aos="fade">
   <div class="container">
 
     <div class="row mb-5">
