--- a/index.html
+++ b/index.html
@@ -888,7 +888,7 @@
     
     
 
-    <section class="site-section" id="partners-section">
+    <section class="site-section" id="testimonials-section">
   <div class="container">
 
     <!-- 标题 -->
