--- a/index.html
+++ b/index.html
@@ -90,9 +90,22 @@
 
 </a></li>
                 <li><a href="#contact-section" class="nav-link">联系我们</a></li>
-                <li class="social"><a href="#contact-section" class="nav-link"><span class="icon-facebook"></span></a></li>
-                <li class="social"><a href="#contact-section" class="nav-link"><span class="icon-twitter"></span></a></li>
-                <li class="social"><a href="#contact-section" class="nav-link"><span class="icon-linkedin"></span></a></li>
+                <!-- 替换原来的三行社交图标 -->
+<li class="social">
+  <a href="mailto:info@zyrz.cn" class="nav-link" title="发送邮件">
+    <span class="icon-email"></span>
+  </a>
+</li>
+<li class="social">
+  <a href="tel:400-888-1234" class="nav-link" title="一键拨号">
+    <span class="icon-phone"></span>
+  </a>
+</li>
+<li class="social">
+  <a href="javascript:void(0);" class="nav-link wechat-trigger" title="微信咨询">
+    <span class="icon-wechat"></span>
+  </a>
+</li>
               </ul>
             </nav>
           </div>
