--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <li><a href="#contact-section" class="nav-link">联系我们</a></li>
                 <!-- 替换原来的三行社交图标 -->
 <li class="social">
-  <a href="mailto:info@zyrz.cn" class="nav-link" title="发送邮件">
+  <a href="mailto:390904439@qq.com" class="nav-link" title="发送邮件">
     <span class="icon-email"></span>
   </a>
 </li>
@@ -1089,10 +1089,16 @@
               </div>
               <div class="col-md-3 footer-social">
                 <h2 class="footer-heading mb-4">联系我们</h2>
-                <a href="#" class="pl-0 pr-3"><span class="icon-facebook"></span></a>
-                <a href="#" class="pl-3 pr-3"><span class="icon-twitter"></span></a>
-                <a href="#" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
-                <a href="#" class="pl-3 pr-3"><span class="icon-linkedin"></span></a>
+                <li class="social">
+  <a href="mailto:390904439@qq.com" class="nav-link" title="发送邮件">
+    <span class="icon-email"></span>
+  </a>
+</li>
+<li class="social">
+  <a href="tel:137-3556-9724" class="nav-link" title="一键拨号">
+    <span class="icon-phone"></span>
+  </a>
+</li>
               </div>
             </div>
           </div>
