--- a/index.html
+++ b/index.html
@@ -101,6 +101,13 @@
     <span class="icon-phone"></span>
   </a>
 </li>
+
+<li class="social">
+  <a href="javascript:void(0);" class="nav-link wechat-trigger" title="微信咨询">
+    <span class="icon-wechat"></span>
+  </a>
+</li>
+                
               </ul>
             </nav>
           </div>
@@ -1097,6 +1104,12 @@
 <li class="social">
   <a href="tel:137-3556-9724" class="nav-link" title="一键拨号">
     <span class="icon-phone"></span>
+  </a>
+</li>
+
+   <li class="social">
+  <a href="javascript:void(0);" class="nav-link wechat-trigger" title="微信咨询">
+    <span class="icon-wechat"></span>
   </a>
 </li>
               </div>
