--- a/index.html
+++ b/index.html
@@ -831,7 +831,7 @@
   </div>
 </section>
 
-   <section class="site-section" id="advantage-section">
+   <section class="site-section" id="blog-section">
   <div class="container">
 
     <div class="row mb-5">
